# nist-first-responder-automation

./: .gitignore  source_me
config/: GROUND.json  GROUND_PAY_8.txt
launch/: apriltag_xcoord.launch  indoor.launch  joy_apriltag_xcoord_mavros.launch  project.launch
src/apriltag_xcoord/: CMakeLists.txt  package.xml
src/apriltag_xcoord/include/: utils.hpp
src/apriltag_xcoord/src/: apriltag_xcoord.cpp  generate_waypoints.cpp  project.cpp  project2.cpp  utils.cpp
src/nist_first_responder_automation/: CMakeLists.txt  package.xml
src/nist_first_responder_automation/include/: bucket_configuration.hpp
src/nist_first_responder_automation/src/: generate_waypoints.cpp  project.cpp  utils.cpp
